--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,8 @@ ol {
 
 .header-title {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
 }
 
 .header-menu {
@@ -66,7 +68,6 @@ ol {
 }
 
 .header-list {
-
     display: flex;
     gap: 40px;
 }
@@ -190,7 +191,6 @@ body{
 }
 
 .service {
-
     margin: 0 auto;
 }
 
@@ -203,7 +203,7 @@ body{
 
 .button {
     gap: 10px;
-border-radius: 4px;
+    border-radius: 4px;
     padding: 16px 29px;
     text-align: center;
     align-items: center;
@@ -232,18 +232,6 @@ border-radius: 4px;
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
-}
-
-.master-features.visually-hidden {
-        position: absolute;
-            width: 1px;
-            height: 1px;
-            padding: 0;
-            margin: -1px;
-            overflow: hidden;
-            clip: rect(0, 0, 0, 0);
-            white-space: nowrap;
-            border: 0;
 }
 
 .master-item {
@@ -287,6 +275,8 @@ border-radius: 4px;
 .list-team {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        background: #fff;
 }
 
 .team {
@@ -334,7 +324,11 @@ border-radius: 4px;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
+}
 
+.portfolio-text:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        background: #fff;
 }
 
 .team-text {
@@ -356,6 +350,12 @@ font-weight: 700;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
         background-color: #2e2f42;
 }
 
@@ -450,7 +450,6 @@ font-weight: 500;
     height: 312px;
 }
 
-
 .logo-footer {
     padding-top: 16px;
     padding-bottom: 16px;
@@ -459,6 +458,5 @@ font-weight: 500;
 }
 
 .paragraph-footer {
-    
     max-width: 264px;
 }
