--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ ol {
 
 .header-title {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-menu {
@@ -60,6 +61,19 @@ ol {
 .header-menu {
     display: block;
     padding: 24px 0;
+    position: relative;
+}
+
+.header-menu::after {
+    content:'';
+    height: 4px;
+    width:100%;
+    background-color: #404bbf;
+    display: block;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
 }
 
 .header-container {
