--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,16 @@ ol {
     position: absolute;
     left: 0;
     bottom: -1px;
+    transform: translateY(120%);
+    transition-duration: 300ms;
+}
+
+.header-menu {
+    overflow: hidden;
+}
+
+.header-menu:hover.header-menu::after {
+    transform: translateY(-30%);
 }
 
 .header-container {
