--- a/css/styles.css
+++ b/css/styles.css
@@ -576,13 +576,28 @@ body {
     width: 1128px;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
+    align-items: baseline;
 }
 
 .master-social-footer {
     gap: 16px;
 }
 
+.list-item-link {
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-item-link:hover,
+.list-item-link:focus {
+    background-color: #31d0aa;
+}
 
 .footer-social {
     display: block;
