--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,7 @@ body {
         border-radius: 50%;
         width: 40px;
         height: 40px;
-        transition-duration: 300ms;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-social {
