--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,6 @@ body {
 }
 
 .master {
-
     padding-bottom: 48px;
     max-width: 496px;
 }
@@ -288,10 +287,6 @@ body {
     margin-bottom: 8px;
 }
 
-.list-item-social:hover {
-    background-color: #31d0aa;
-}
-
 .master-hero-list {
     display: flex;
     width: 1128px;
@@ -343,19 +338,22 @@ body {
 }
 
 .list-item-social {
+    background-color: #4d5ae5;
     display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #4d5ae5;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        transition: background-colo 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.list-item-social:hover,
+.list-item-social:focus {
+    background-color: #31d0aa;
 }
 
 .icon-social {
     fill: #f4f4fd;
-    display: block;
 }
 
 .master-team {
