--- a/css/styles.css
+++ b/css/styles.css
@@ -347,8 +347,19 @@ body {
     border-radius: 50%;
 }
 
-.list-item-social:hover,
-.list-item-social:focus {
+.list-item-social-link {
+    background-color: #4d5ae5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-item-social-link:hover,
+.list-item-social-link:focus {
     background-color: #31d0aa;
 }
 
