--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,9 @@ ol {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+.curent {
+    color:#404bbf;
+}
 
 .header-menu {
     display: block;
@@ -64,7 +67,7 @@ ol {
     position: relative;
 }
 
-.header-menu::after {
+.curent::after {
     content:'';
     height: 4px;
     width:100%;
@@ -74,18 +77,17 @@ ol {
     position: absolute;
     left: 0;
     bottom: -1px;
-    transform: translateY(120%);
     transition-duration: 300ms;
 }
 
 .header-menu {
     overflow: hidden;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #404bbf;
+
 }
 
 .header-menu:hover.header-menu::after {
-    transform: translateY(-30%);
+    transform: translateY();
 }
 
 .header-container {
@@ -233,7 +235,7 @@ body {
 }
 
 .master {
-    padding-bottom: 48px;
+    margin-bottom: 48px;
     max-width: 496px;
 }
 
@@ -446,13 +448,13 @@ body {
     top: 0;
     background-color: #4d5ae5;
     padding: 40px 32px;
-    height: 100%;
+    height: 300px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    transform: translateY(100%);
+    transform: translateY(141%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
