--- a/css/styles.css
+++ b/css/styles.css
@@ -439,7 +439,7 @@ body {
     overflow: hidden;
 }
 
-.portfolio-item-wrap:hover .portfolio-wrap-par {
+.portfolio-item:hover .portfolio-wrap-par {
     transform: translateY(0);
 }
 
@@ -448,13 +448,13 @@ body {
     top: 0;
     background-color: #4d5ae5;
     padding: 40px 32px;
-    height: 300px;
+    height: 100%;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    transform: translateY(141%);
+    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
